# flask-practice

./: Makefile  docker-compose.yml
.devcontainer/: devcontainer.json
application/: main.py  pyproject.toml  schemas.py
application/migrations/versions/: 4b76ed0ee81d_.py  838a24c05dea_initial_migration.py
application/models/: __init__.py  item.py  store.py  user.py
application/static/: swagger.yml
containers/flask/: Dockerfile  entrypoint.sh
